--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,6 +4,9 @@
 
 
 .container {
+    position: relative;
+   
+
     .slider {
         width: 100%;
         overflow: hidden;
@@ -337,3 +340,4 @@
 
 
 }
+
