--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" >
     <div class="logo" [routerLink]="[ '' ]" routerLinkActive="route-active">
         <img src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Flogo.svg?alt=media&token=bbe800cf-da84-4d9b-9fd9-2722a7a14064"
             alt="">
@@ -55,30 +55,29 @@
 
     <div class="info">
         <p class="numberOfPhone">+380978780837</p>
-        <p class="table">Працюємо з <b>11:00</b> до <b>22:30</b></p>
+        <p class="table" style="text-align: center;">Працюємо з <b>11:00</b> до <b>22:30</b></p>
     </div>
 
-    <div class="user" click="change()" *ngIf="!isLogin" [routerLink]="[ '/auth' ]">
+    <div class="user" (click)="openLoginDialog()" *ngIf="!isLogin">
         <img src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Fuser.svg?alt=media&token=44574384-593f-4b47-b04b-bad9ac0186b7"
             alt="">
     </div>
 
-    <div class="user"  *ngIf="isLogin" [routerLink]="[ '/'+loginUrl ]">
+    <div class="user" *ngIf="isLogin" [routerLink]="[ '/'+loginUrl ]">
         <img *ngIf="!menuUserOpen" (click)="menuUser()" style="position: relative; z-index: 3;"
             src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Fuser.svg?alt=media&token=44574384-593f-4b47-b04b-bad9ac0186b7"
             alt="">
-        <p *ngIf="menuUserOpen"  (click)="menuUser()" style="z-index: 3; margin-left: 0;" id="closeSpan">+</p>
-        
+        <p *ngIf="menuUserOpen" (click)="menuUser()" style="z-index: 3; margin-left: 0;" id="closeSpan">+</p>
+
         <div class="menu-user" (click)="menuUser()" *ngIf="menuUserOpen">
-            <p class="menu-user-punkt"  [routerLink]="[ '/cabinet/user-info' ]">Особисті дані</p>
+            <p class="menu-user-punkt" [routerLink]="[ '/cabinet/user-info' ]">Особисті дані</p>
             <p class="menu-user-punkt">Історія замовлень</p>
             <p class="menu-user-punkt">Зміна паролю</p>
-            <p class="menu-user-punkt" (click) = "logout()">Вихід</p>
+            <p class="menu-user-punkt" (click)="logout()">Вихід</p>
         </div>
     </div>
 
-
-    <div class="basket" (click)="openBasket()">
+    <div class="basket" (click)="openBasketModal()" >
         <div class="basket-img">
             <img src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Fbasket.svg?alt=media&token=b207a93a-c2ea-4dc6-88de-f7ddff1d6cf9"
                 alt="">
@@ -87,35 +86,6 @@
         <p class="pSum"><b>0</b> грн</p>
 
     </div>
-    <div class="basket-info" *ngIf="basketOpen">
-        <div class="basket-wrapper" *ngIf="!basketEmpty">
-            <div class="basket-item" *ngFor="let product of basket">
-                <img class="basket-img" [src]="product.imagePath" alt="">
-                <p class="basket-name">{{ product.name}}</p>
-                <div class="manageCount">
-                    <button type="button" (click)="productCount(product, false)" class="btnMinus">-</button>
-                    <input class="countProduct" type="text"
-                        [value]="product.count === null || product.count === 0 ? 1 : product.count" readonly
-                        style="width: 40px;">
-                    <button type="button" (click)="productCount(product, true)" class="btnAdd">+</button>
-                </div>
-                <p class="basket-price">{{ product.count === null ? product.price : product.price * product.count }} грн
-                </p>
-                <img class="basket-delete" (click)="delete(product)"
-                    src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Ffree-trash-icon-347-thumb.png?alt=media&token=bfb5a522-b042-42e4-b487-0542782b5167"
-                    alt="" class="basket-delete">
-            </div>
-        </div>
-        <div class="basket-empty" *ngIf="basketEmpty">
-            <img src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Fcart-empty-img.svg?alt=media&token=539f0fbe-4658-4c86-a49b-7c899c72feb8"
-                alt="" class="basket-empty-img">
-            <p class="basket-empty-p">Кошик порожній</p>
-            <button class="goToMenu" [routerLink]="[ '' ]" (click)=closeBasket()> Перейти до каталогу</button>
-        </div>
-        <div class="basket-option">
-            <p class="basket-option-price">Сума: {{ total }} грн</p>
-            <button type="button" (click)=closeBasket() [routerLink] = "[ '/order' ]" class="orderBut">Оформити замовлення</button>
-        </div>
 
-    </div>
+   
 </div>
