--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <div class="call">
+    <div class="call" (click)="openPhoneModal()">
         <img src="https://firebasestorage.googleapis.com/v0/b/monosushi-8418b.appspot.com/o/images%2Fphone.svg?alt=media&token=4d348a8d-abf2-416d-8920-e1e1cb930164"
             alt="">
         <p class="callText">Ми зателефонуємо</p>
@@ -84,7 +84,7 @@
             <span class="countElement">{{ total }}</span>
         </div>
         <p class="pSum"><b>0</b> грн</p>
-
+ 
     </div>
 
    
