--- a/src/app/pages/cabinet/cabinet.component.html
+++ b/src/app/pages/cabinet/cabinet.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="menu">
         <div [routerLink]="[ '/cabinet/user-info' ]" routerLinkActive="route-active-admin" class="punkts-menu">Особисті дані</div>
-        <div  routerLinkActive="route-active-admin" class="punkts-menu">Історія замовлень</div>
-        <div   routerLinkActive="route-active-admin" class="punkts-menu">Зміна паролю</div>
+        <div [routerLink]="[ '/cabinet/history' ]" routerLinkActive="route-active-admin" class="punkts-menu">Історія замовлень</div>
+        <div [routerLink]="[ '/cabinet/password' ]" routerLinkActive="route-active-admin" class="punkts-menu">Зміна паролю</div>
         <div style="border-right: none;" class="punkts-menu"></div>
     </div>
     <div class="cont">
