--- a/src/app/pages/discount/discount-info/discount-info.component.scss
+++ b/src/app/pages/discount/discount-info/discount-info.component.scss
@@ -1,6 +1,6 @@
-@import "../../shared/styles/base";
-@import "../../shared/styles/mixins";
-@import "../../shared/styles/variables";
+@import "../../../shared/styles/base";
+@import "../../../shared/styles/mixins";
+@import "../../../shared/styles/variables";
 
 .container {
     width: 60%;
