--- a/src/app/pages/product/product-info/product-info.component.scss
+++ b/src/app/pages/product/product-info/product-info.component.scss
@@ -1,6 +1,6 @@
-@import "../../shared/styles/_base.scss";
-@import "../../shared/styles/_mixins.scss";
-@import "../../shared/styles/_variables.scss";
+@import "../../../shared/styles/base";
+@import "../../../shared/styles/mixins";
+@import "../../../shared/styles/variables";
 
 
 .container {
