--- a/src/app/shared/styles/_theme-material.scss
+++ b/src/app/shared/styles/_theme-material.scss
@@ -17,8 +17,7 @@ $primary-default-value: (
   700: #F3B484,
   800: #F3B484,
   900: #F3B484,
-  contrast: (
-    50: white,
+  contrast: (50: white,
     100: white,
     200: white,
     300: white,
@@ -27,8 +26,7 @@ $primary-default-value: (
     600: white,
     700: white,
     800: white,
-    900: white
-  )
+    900: white)
 );
 
 $warn-default-value: (
@@ -42,8 +40,7 @@ $warn-default-value: (
   700: #EB5757,
   800: #EB5757,
   900: #EB5757,
-  contrast: (
-    50: white,
+  contrast: (50: white,
     100: white,
     200: white,
     300: white,
@@ -52,24 +49,23 @@ $warn-default-value: (
     600: white,
     700: white,
     800: white,
-    900: white
-  )
+    900: white)
 );
 
 @include mat.core();
 $custom-theme-primary: mat.define-palette($primary-default-value, 500, 100, 700);
-$custom-theme-accent:  mat.define-palette(mat.$brown-palette, A200, A100, A400);
-$custom-theme-warn:    mat.define-palette($warn-default-value);
+$custom-theme-accent: mat.define-palette(mat.$brown-palette, A200, A100, A400);
+$custom-theme-warn: mat.define-palette($warn-default-value);
 $custom-theme: mat.define-light-theme($custom-theme-primary, $custom-theme-accent, $custom-theme-warn);
 @include mat.all-component-themes($custom-theme);
 
 .dialog-back {
-    background-color: rgba(0, 0, 0, 0.701);
+  background-color: rgba(0, 0, 0, 0.701);
 }
 
 .auth-dialog {
-    width: 800px;
-    min-height: 500px;
+  width: 800px;
+  min-height: 500px;
 }
 
 .basket-info {
@@ -81,4 +77,9 @@ $custom-theme: mat.define-light-theme($custom-theme-primary, $custom-theme-accen
   right: 0;
   max-height: 600px;
   border-radius: 20px;
+}
+
+.phone {
+  width: 800px;
+  min-height: 500px;
 }
